# Balancing_Robot

./: CMakeLists.txt  README.md  app_main.c  encoder.c  encoder.h  hc06.H  hc06.c  idf_component.yml  imu.c  imu.h  lidar.c  lidar.h  pid.c  pid.h  pwm.c  pwm.h  rx28.c  rx28.h  variable.h
HardWare/: 로봇뒷면.STL  로봇밑면.STL  로봇앞면.STL  모터-타이어 연결.STL  몸체-무릎.STL
